# Outdoor-Autonomous-Rover

./: .gitignore  README.md  frames_2026-01-01_19.17.33.gv
rover_description/urdf/: rover.urdf
src/m2020_nav_description/: CMakeLists.txt  package.xml
src/m2020_nav_description/launch/: state_publisher.launch.py
src/m2020_nav_description/urdf/: m2020_nav.urdf
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: controllers.yaml
src/rover_description/launch/: display.launch.py
src/rover_description/urdf/: rover.urdf  rover.urdf.xacro
src/rover_simulation/: CMakeLists.txt  package.xml
src/rover_simulation/config/: controllers.yaml  diff_drive_controller.yaml  ekf.yaml
src/rover_simulation/config/nav2/: nav2.yaml
src/rover_simulation/launch/: bringup.launch.py  control_only.launch.py  ekf.launch.py  nav2.launch.py  relays.launch.py  sim.launch.py  slam.launch.py
src/rover_simulation/worlds/: outdoor.world
